[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autobahn_client"
version = "0.1.2"
description = "Autobahn Client"
authors = [{ name = "Denis Koterov", email = "denis.koterov@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "protobuf>=6.31.1",
    "websockets>=15.0.1",
    "asyncio>=3.4.3",
    "numpy>=2.3.1",
    "setuptools>=80.9.0",
]

[tool.setuptools]

[tool.setuptools.package-data]
"autobahn_client.proto" = ["*.py", "*.pyi"]

[tool.setuptools.packages.find]
where = ["src/python"]
