[package]
name = "autobahn-client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
tokio-tungstenite = "0.26.2"
futures-util = "0.3"
prost = "0.13.5"
bytes = "1.5"
serde_json = "1.0"
url = "2.5"
prost-build = "0.13.5"
autobahn-client-macros = { path = "macros" }
uuid = { version = "1.13", features = ["v4"] }
ctor = "0.2"

[build-dependencies]
prost-build = "0.13.5"
walkdir = "2.4.0"
