[package]
name = "autobahn-client"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "Autobahn client with RPC macros and protobuf-based messaging"
homepage = "https://github.com/godbrigero/autobahn_client"
repository = "https://github.com/godbrigero/autobahn_client"
keywords = ["rpc", "websocket", "protobuf", "client"]
categories = ["network-programming", "api-bindings"]
rust-version = "1.74"
exclude = ["example/*", "src/main/java/*", "src/test/*", "gradle*", "*.gradle"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
tokio = { version = "1.36", features = ["full"] }
tokio-tungstenite = "0.26.2"
futures-util = "0.3"
prost = "0.13.5"
bytes = "1.5"
serde_json = "1.0"
url = "2.5"
## prost-build is only needed as a build-dependency
autobahn-client-macros = { version = "0.1.0", path = "macros" }
uuid = { version = "1.13", features = ["v4"] }
ctor = "0.2"

[build-dependencies]
prost-build = "0.13.5"
walkdir = "2.4.0"
